# oneplus-updates-tracker

./: .gitignore  .pylintrc  README.md  config.yml.example  pyproject.toml
op_tracker/: __init__.py  __main__.py  tracker.py  tracker_official.py
op_tracker/common/api_client/: common_scraper.py
op_tracker/common/database/: __init__.py  database.py  helpers.py
op_tracker/common/database/models/: __init__.py  update.py
op_tracker/data/: latest.yml  regions.yml
op_tracker/data/cn/: cn.yml
op_tracker/data/cn/Beta/: OnePlus 3.yml  OnePlus 3T.yml  OnePlus 5.yml  OnePlus 7 Pro.yml  OnePlus 7.yml
op_tracker/data/cn/Stable/: OnePlus 5.yml  OnePlus 5T.yml  OnePlus 7T Pro.yml  OnePlus 8 Pro.yml  OnePlus 8.yml
op_tracker/data/global/: global.yml
op_tracker/data/global/Beta/: OnePlus 3.yml  OnePlus 3T.yml  OnePlus 5.yml  OnePlus 7.yml  OnePlus 7T.yml
op_tracker/data/global/Stable/: OnePlus 1.yml  OnePlus 2.yml  OnePlus 3.yml  OnePlus 3T.yml  (+2 more)
op_tracker/data/in/: in.yml
op_tracker/data/latest/: OnePlus 5.yml  OnePlus 5T.yml  OnePlus 7 Pro.yml  OnePlus 7.yml  OnePlus 7Pro.yml  OnePlus 7T Pro.yml  OnePlus 7T.yml
op_tracker/data/official/: devices.yml  regions.yml
op_tracker/data/oxygen_updater/: devices.yml
op_tracker/data/updater/: latest.yml
op_tracker/data/us/: us.yml
op_tracker/official/api_client/: api_client.py
op_tracker/official/models/: device.py  devices.py  update.py
op_tracker/official/scraper/: base_website.py
op_tracker/official/scrapers/: base_website.py
op_tracker/utils/: data_manager.py  git.py  helpers.py  merger.py  telegram.py
(+167 files in other folders)
