[tool.poetry]
name = "op_tracker"
version = "0.1.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
humanize = "^2.4.0"
PyYAML = "^5.3.1"
python-telegram-bot = "^12.7"
aiohttp = "^3.6.2"
beautifulsoup4 = "^4.9.1"
sqlalchemy = "^1.3.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
