[tool.poetry]
name = "op_tracker"
version = "0.1.0"
description = ""
authors = ["yshalsager <ysh-alsager@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
humanize = "^2.4.0"
PyYAML = "^5.3.1"
python-telegram-bot = "^12.7"
aiohttp = "^3.6.2"
beautifulsoup4 = "^4.9.1"
sqlalchemy = "^1.3.17"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
